aanpassingen die we samen hebben overlopen